Rotate 45 degees works

--- a/jQuery_Space_Invader_Exercise.html
+++ b/jQuery_Space_Invader_Exercise.html
@@ -66,11 +66,11 @@
           <!-- spaceship Stretch -->
           <div class="card card-default">
             <div class="card-heading">
-              <h3 class="card-title text-center">Stretch the Spaceship anyway you want!</h3>
+              <h3 class="card-title text-center">Stretch Width of Spaceship anyway you want!</h3>
             </div>
             <div class="card-body">
               <div class="text-center">
-                <button class="btn btn-info btn-lg normal-height-button"> Normal Height</button>
+                <button class="btn btn-info btn-lg normal-width-button"> Normal Width</button>
                 <button class="btn btn-default btn-lg stretch-button"> Stretch</button>
               </div>
             </div>
@@ -78,11 +78,12 @@
           <!-- spaceship Rotate Spaceship 0 to 90 degrees -->
           <div class="card card-default">
             <div class="card-heading">
-              <h3 class="card-title text-center">Rotate Spaceship 90 Degrees!</h3>
+              <h3 class="card-title text-center">Rotate Spaceship 45 Degrees!</h3>
             </div>
             <div class="card-body">
               <div class="text-center">
                 <button class="btn btn-info btn-lg rotate-counter-clockwise-button"> Counter Clockwise</button>
+                <button class="btn btn-primary btn-lg rotate-level-button"> Level Ship </button>
                 <button class="btn btn-default btn-lg rotate-clockwise-button"> Clockwise</button>
               </div>
             </div>
