working on smoothness

--- a/jQuery_Space_Invader_Exercise.html
+++ b/jQuery_Space_Invader_Exercise.html
@@ -15,7 +15,7 @@
     <div class="container-fluid">
       <!-- Jumbotron with Title -->
       <div class="jumbotron">
-        <h1 class="text-center main-title"><strong>JQuery Space Invaders!</strong></h1>
+<h1 class="text-center main-title" style="line-height:64px"><strong>JQuery Space Invaders!</strong></h1>
         <h4 class="text-center">Rated <span class="rating">M</span> for Master Software Developers Only</h4>
         <hr>
         <div class="text-center">
@@ -128,7 +128,7 @@
         <!-- Right card (Spaceship)-->
         <div class="col-lg-6 main-column">
           <!-- Spaceship Image -->
-          <img class="img captain-planet" src="./images/spaceship-png.png" style="position:absolute; top:100px; left: 40px; z-index: -20; height: 250px">
+          <img class="img captain-planet" src="./images/spaceship-png.png" style="position:absolute; top:100px; left: 40px; z-index: -20; height: 300px">
         </div>
       </div>
     </div>
